<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nqnghia.testnavigationdrawerandtabview.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.nqnghia.testnavigationdrawerandtabview.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.nqnghia.testnavigationdrawerandtabview.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.nqnghia.testnavigationdrawerandtabview.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.nqnghia.testnavigationdrawerandtabview.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.nqnghia.testnavigationdrawerandtabview.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/home"
        android:name="com.nqnghia.testnavigationdrawerandtabview.ui.fragment_home.Home"
        android:label="@string/home"
        tools:layout="@layout/home" />

    <fragment
        android:id="@+id/content"
        android:name="com.nqnghia.testnavigationdrawerandtabview.ui.fragment_content.Content"
        android:label="@string/content"
        tools:layout="@layout/content" />

</navigation>